--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "install:clean": "rm -rf node_modules/ && rm -rf package-lock.json && npm install && npm run dev"
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "nouislider": "14.0.2",
     "v-tooltip": "2.0.2",
     "vue": "2.6.10",
+    "vue-axios": "^2.1.5",
     "vue-carousel": "0.18.0",
     "vue-clickaway": "2.2.2",
     "vue-lazyload": "1.3.1",
