--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "axios": "^0.19.0",
     "nouislider": "14.0.2",
+    "superagent": "^5.1.0",
     "v-tooltip": "2.0.2",
     "vue": "2.6.10",
     "vue-axios": "^2.1.5",
@@ -21,7 +22,8 @@
     "vue-clickaway": "2.2.2",
     "vue-lazyload": "1.3.1",
     "vue-material": "1.0.0-beta-11",
-    "vue-router": "3.0.7"
+    "vue-router": "3.0.7",
+    "vue-superagent": "^1.2.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "3.9.2",
